# skiwetter

./: .gitignore  Dockerfile.analysis  Dockerfile.scraper  Dockerfile.web  README.md  Taskfile.yml  docker-compose.yml  duties.py  pyproject.toml  schedule.yaml  vivaldi_wrapper.sh
.github/workflows/: scraper.yml
docs/: index.html
scraper/: helpers.py  scraper.py
scripts/: analyze_pdf.py  generate_static_page.py  verify_data.py
tests/: test_scraper.py  test_web.py  visual_test.py
web/: helpers.py  main.py
web/templates/: index.html
